--- a/Feature_Design/gpt.ipynb
+++ b/Feature_Design/gpt.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18f7f010",
+   "cell_type": "markdown",
+   "id": "93301594",
    "metadata": {},
-   "outputs": [],
    "source": [
     "https://d4mucfpksywv.cloudfront.net/better-language-models/language-models.pdf\n",
     "\n",
@@ -13,21 +11,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4b82a24",
+   "cell_type": "markdown",
+   "id": "6b4f4fe2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "https://medium.com/ai-innovation/beginners-guide-to-retrain-gpt-2-117m-to-generate-custom-text-content-8bb5363d8b7f"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bdcd8a7",
+   "cell_type": "markdown",
+   "id": "4bf028d1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Ideas:\n",
     "    \n",
@@ -39,14 +33,53 @@
     "    https://jalammar.github.io/illustrated-gpt2/\n",
     "        https://jalammar.github.io/illustrated-transformer/\n",
     "            \n",
-    "            \n",
-    "            https://gmihaila.github.io/tutorial_notebooks/gpt2_finetune_classification/"
+    ": https://gmihaila.github.io/tutorial_notebooks/gpt2_finetune_classification/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b61c18f",
+   "metadata": {},
+   "source": [
+    " Following: https://huggingface.co/transformers/custom_datasets.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97e054f",
+   "id": "bbf3cee3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f77691ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98cf0251",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45360130",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9706e59c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -54,61 +87,289 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bbf3cee3",
+   "id": "cda35d38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.9996980428695679}]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import io\n",
-    "import os\n",
-    "import torch\n",
-    "from tqdm.notebook import tqdm\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "#from ml_things import plot_dict, plot_confusion_matrix, fix_text\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
-    "from transformers import (set_seed,\n",
-    "                          TrainingArguments,\n",
-    "                          Trainer,\n",
-    "                          GPT2Config,\n",
-    "                          GPT2Tokenizer,\n",
-    "                          AdamW, \n",
-    "                          get_linear_schedule_with_warmup,\n",
-    "                          GPT2ForSequenceClassification)\n",
+    "from transformers import pipeline\n",
     "\n",
-    "# Set seed for reproducibility.\n",
-    "set_seed(123)\n",
-    "\n",
-    "# Number of training epochs (authors on fine-tuning Bert recommend between 2 and 4).\n",
-    "epochs = 4\n",
-    "\n",
-    "# Number of batches - depending on the max sequence length and GPU memory.\n",
-    "# For 512 sequence length batch of 10 works without cuda memory issues.\n",
-    "# For small sequence length can try batch of 32 or higher.\n",
-    "batch_size = 32\n",
-    "\n",
-    "# Pad or truncate text sequences to a specific length\n",
-    "# if `None` it will use maximum sequence of word piece tokens allowed by model.\n",
-    "max_length = 60\n",
-    "\n",
-    "# Look for gpu to use. Will use `cpu` by default if no gpu found.\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
-    "# Name of transformers model - will use already pretrained model.\n",
-    "# Path of transformer model - will load your own model from local disk.\n",
-    "model_name_or_path = 'gpt2'\n",
-    "\n",
-    "# Dictionary of labels and their id - this will be used to convert.\n",
-    "# String labels to number ids.\n",
-    "labels_ids = {'neg': 0, 'pos': 1}\n",
-    "\n",
-    "# How many labels are we using in training.\n",
-    "# This is used to decide size of classification head.\n",
-    "n_labels = len(labels_ids)"
+    "# Allocate a pipeline for sentiment-analysis\n",
+    "classifier = pipeline('sentiment-analysis')\n",
+    "classifier('We are very happy to introduce pipeline to the transformers repository.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "05309b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.997699499130249}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier('We are sad.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f77691ff",
+   "id": "ddff36e0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bd1d2c68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "def read_imdb_split(split_dir):\n",
+    "    #split_dir = Path(split_dir)\n",
+    "    texts = []\n",
+    "    labels = []\n",
+    "    for label_dir in [\"pos\", \"neg\"]:\n",
+    "        for text_file in Path(split_dir + \"/\" + label_dir).iterdir():\n",
+    "            \n",
+    "            texts.append(text_file.read_text(encoding=\"utf8\"))\n",
+    "            labels.append(0 if label_dir == \"neg\" else 1)\n",
+    "\n",
+    "    return texts, labels\n",
+    "\n",
+    "train_texts, train_labels = read_imdb_split('aclImdb/train')\n",
+    "test_texts, test_labels = read_imdb_split('aclImdb/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "daffcda4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "eb1e9ffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is easily the most underrated film inn the Brooks cannon. Sure, its flawed. It does not give a realistic view of homelessness (unlike, say, how Citizen Kane gave a realistic view of lounge singers, or Titanic gave a realistic view of Italians YOU IDIOTS). Many of the jokes fall flat. But still, this film is very lovable in a way many comedies are not, and to pull that off in a story about some of the most traditionally reviled members of society is truly impressive. Its not The Fisher King, but its not crap, either. My only complaint is that Brooks should have cast someone else in the lead (I love Mel as a Director and Writer, not so much as a lead).'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_texts[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a7f2992b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_texts, val_texts, train_labels, val_labels = train_test_split(train_texts, train_labels, test_size=.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "66278ef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import DistilBertTokenizerFast\n",
+    "tokenizer = DistilBertTokenizerFast.from_pretrained('distilbert-base-uncased')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dbb4f277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_encodings = tokenizer(train_texts, truncation=True, padding=True)\n",
+    "val_encodings = tokenizer(val_texts, truncation=True, padding=True)\n",
+    "test_encodings = tokenizer(test_texts, truncation=True, padding=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3e6b36f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Encoding(num_tokens=512, attributes=[ids, type_ids, tokens, offsets, attention_mask, special_tokens_mask, overflowing])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_encodings[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3849ed0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "class IMDbDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, encodings, labels):\n",
+    "        self.encodings = encodings\n",
+    "        self.labels = labels\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        item = {key: torch.tensor(val[idx]) for key, val in self.encodings.items()}\n",
+    "        item['labels'] = torch.tensor(self.labels[idx])\n",
+    "        return item\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)\n",
+    "\n",
+    "train_dataset = IMDbDataset(train_encodings, train_labels)\n",
+    "val_dataset = IMDbDataset(val_encodings, val_labels)\n",
+    "test_dataset = IMDbDataset(test_encodings, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e6503dbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_layer_norm.weight', 'vocab_projector.bias', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_transform.bias', 'vocab_transform.weight']\n",
+      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'pre_classifier.weight', 'classifier.weight', 'pre_classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='5' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [5/5 08:26, Epoch 0/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=5, training_loss=0.6874878883361817, metrics={'train_runtime': 653.621, 'train_samples_per_second': 0.008, 'total_flos': 16454863257600.0, 'epoch': 0.0, 'init_mem_cpu_alloc_delta': 3788800, 'init_mem_cpu_peaked_delta': 0, 'train_mem_cpu_alloc_delta': -28446720, 'train_mem_cpu_peaked_delta': 7668699136})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import DistilBertForSequenceClassification, Trainer, TrainingArguments\n",
+    "\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir='./results',          # output directory\n",
+    "    num_train_epochs= 1,              # total number of training epochs\n",
+    "    per_device_train_batch_size=16,  # batch size per device during training\n",
+    "    per_device_eval_batch_size=64,   # batch size for evaluation\n",
+    "    warmup_steps=10,                # number of warmup steps for learning rate scheduler\n",
+    "    weight_decay=0.01,               # strength of weight decay\n",
+    "    logging_dir='./logs',            # directory for storing logs\n",
+    "    logging_steps=10,\n",
+    "    max_steps = 5\n",
+    ")\n",
+    "\n",
+    "model = DistilBertForSequenceClassification.from_pretrained(\"distilbert-base-uncased\")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
+    "    args=training_args,                  # training arguments, defined above\n",
+    "    train_dataset=train_dataset,         # training dataset\n",
+    "    eval_dataset=val_dataset             # evaluation dataset\n",
+    ")\n",
+    "\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82aba14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2ab8af6",
    "metadata": {},
    "outputs": [],
    "source": []
