--- a/Feature_Design/bert.ipynb
+++ b/Feature_Design/bert.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4b62f961",
+   "execution_count": 1,
+   "id": "332b3930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "55dcf8f9",
+   "execution_count": null,
+   "id": "9afdc632",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../Data/wsb_cleaned.csv')"
+    "df = pd.read_csv('../Data/wsb_full.csv')\n",
+    "\n",
+    "df = df.loc[df.removed_by_category.isnull()]\n",
+    "\n",
+    "col = 'title'\n",
+    "df = df.dropna(subset = [col])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9d0309bf",
+   "execution_count": 3,
+   "id": "5fab0075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b4770546",
+   "execution_count": 4,
+   "id": "99850509",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_transform.bias', 'vocab_layer_norm.weight', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_layer_norm.bias', 'vocab_projector.bias']\n",
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_transform.bias', 'vocab_projector.bias', 'vocab_layer_norm.weight', 'vocab_transform.weight']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -73,19 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a0aa5e23",
+   "execution_count": 6,
+   "id": "9aac59fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "tokenized = batch_1['selftext'].apply((lambda x: tokenizer.encode(x, add_special_tokens=True)))"
+    "tokenized = batch_1[col].apply((lambda x: tokenizer.encode(x, add_special_tokens=True)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "991c4c4f",
+   "execution_count": null,
+   "id": "0a1c666b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "833ab6e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,71 +113,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bef5ff9e",
+   "execution_count": null,
+   "id": "7275bdae",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2000, 70)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.array(padded).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1e19bd09",
+   "execution_count": null,
+   "id": "449e4938",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  101,  2204,  2051, ...,     0,     0,     0],\n",
-       "       [  101,  1045, 10587, ...,     0,     0,     0],\n",
-       "       [  101,  4965, 20014, ...,     0,     0,     0],\n",
-       "       ...,\n",
-       "       [  101, 10514, 11561, ...,     0,     0,     0],\n",
-       "       [  101, 18411,  2278, ...,     0,     0,     0],\n",
-       "       [  101,  4301,  1998, ...,     0,     0,     0]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "padded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "54a8e945",
+   "execution_count": null,
+   "id": "d2499cf6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2000, 70)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "attention_mask = np.where(padded != 0, 1, 0)\n",
     "attention_mask.shape"
@@ -172,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "31a37123",
+   "execution_count": null,
+   "id": "a08bc2d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "be23abba",
+   "execution_count": null,
+   "id": "407e5a9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "240ba516",
+   "execution_count": null,
+   "id": "570fdf4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11510385",
+   "id": "c780d8ee",
    "metadata": {},
    "source": [
     "Classification"
@@ -215,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0664138a",
+   "id": "8e86e3ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "bca799a7",
+   "execution_count": null,
+   "id": "acf01be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,21 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6c3b294b",
+   "execution_count": null,
+   "id": "b5200958",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression()"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr_clf = LogisticRegression()\n",
     "lr_clf.fit(train_features, train_labels)"
@@ -256,41 +219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "dd88db13",
+   "execution_count": null,
+   "id": "0ec16cd6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.608"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr_clf.score(test_features, test_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "c118da48",
+   "execution_count": null,
+   "id": "762254a8",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dummy classifier score: 0.637 (+/- 0.00)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.dummy import DummyClassifier\n",
     "clf = DummyClassifier()\n",
@@ -301,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa6311c",
+   "id": "a453a4d3",
    "metadata": {},
    "source": [
     "Regression:"
@@ -309,18 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "7f10b7bc",
+   "execution_count": null,
+   "id": "5acb76d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dummy classifier score: -0.006 (+/- 0.01)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.dummy import DummyRegressor\n",
     "clf = DummyRegressor()\n",
@@ -332,15 +268,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f693128b",
+   "id": "a9c45d78",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "2cbcba92",
+   "execution_count": null,
+   "id": "d6c1a624",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,28 +288,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02e33e11",
+   "id": "b97d53b8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "69f7c6cc",
+   "execution_count": null,
+   "id": "5e3694af",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearRegression()"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr = LinearRegression()\n",
     "lr.fit(train_features, train_labels)"
@@ -381,21 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "ef047616",
+   "execution_count": null,
+   "id": "6067eca0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.09169165287122327"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr.score(test_features, test_labels)"
    ]
@@ -403,35 +317,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3a592fd",
+   "id": "41997eb2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "0b4a2613",
+   "execution_count": null,
+   "id": "1a7a0766",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "             colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
-       "             importance_type='gain', interaction_constraints='',\n",
-       "             learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
-       "             min_child_weight=1, missing=nan, monotone_constraints='()',\n",
-       "             n_estimators=100, n_jobs=8, num_parallel_tree=1, random_state=2,\n",
-       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
-       "             tree_method='exact', validate_parameters=1, verbosity=None)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xgboost as xgb\n",
     "# Instantiate an XGBRegressor\n",
@@ -445,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb6784c",
+   "id": "c9e551c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -453,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0707193",
+   "id": "ac9fa907",
    "metadata": {},
    "outputs": [],
    "source": []
