updated the bert file

--- a/ExploratoryDataAnalysis/Pairplots.ipynb
+++ b/ExploratoryDataAnalysis/Pairplots.ipynb
@@ -21,11 +21,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "08d753dc",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR! Session/line number was not unique in database. History logging moved to new session 595\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\Erdos_Institute\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3169: DtypeWarning: Columns (46,88,117,118,119,122,123,124,125) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('../Data/wsb_not_null.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "895e55a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         0\n",
+       "1         0\n",
+       "2         0\n",
+       "3         0\n",
+       "4         0\n",
+       "         ..\n",
+       "97841     0\n",
+       "97842     3\n",
+       "97843     3\n",
+       "97844     0\n",
+       "97845    10\n",
+       "Name: total_awards_received, Length: 97846, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.total_awards_received\n"
+   ]
   },
   {
    "cell_type": "markdown",
